[package]
name = "treliudp"
version = "0.4.0"
authors = ["Cobrand <cobrandw@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reliudp = { git = "https://github.com/Cobrand/reliudp.git", rev = "fa559ce6a" }
bincode = "1.3.1"
serde = { version = "1.0.116", features = ["derive"] }

log = "0.4.11"

update_regulator = { git = "https://github.com/Cobrand/update_regulator.git" }

[dev-dependencies]
env_logger = "0.7.1"
